<resources>
    <string name="app_name">LandPick</string>
    <string name="searchHint">업체명을 입력하시오..</string>
    <string name="fail_to_connect">연결에 실패하였습니다.</string>
    <string name="empty_result">결과가 존재하지 않습니다.</string>
    <string name="please_input_search_keyword">검색어를 입력해주세요</string>
    <string name="search">검색</string>
    <string name="loading">로딩중…</string>
    <string name="retry">다시 시도</string>
    <string name="twoMinute">02:00</string>
    <string name="empty_reservation">예약 없음</string>
    <string name="input_validCode">인증번호 입력</string>
    <string name="validCode">인증번호</string>
    <string name="agreeToTheTermsAndConditions">이용약관 동의</string>
    <string name="request">요청</string>
    <string name="reservation_date_item">%s %s:%s</string>
    <string name="home">홈</string>
    <string name="call">전화</string>
    <string name="rebase">조회</string>
    <string name="company_name">새마을 금고 본점(%s)</string>
    <string name="viewTerms">약관보기</string>
    <string name="Km">%s Km</string>
    <string name="HourMin">%s 시간 %s 분</string>
    <string name="Duration">%s 분</string>
    <string name="distanceText">%s Km</string>
    <string name="ChangingInformation">정보 수정</string>
    <string name="signUp">회원가입</string>
    <string name="signUpInfo">회원가입 정보</string>
    <string name="logout">로그아웃</string>
    <string name="login">로그인</string>
    <string name="save">저장</string>
    <string name="login_fail">자동로그인 실패</string>
    <string name="reservation_Inqury">예약 문의</string>
    <string name="success_data">회사목록을 불러왔습니다.</string>
    <string name="failed_data">회사목록을 불러오는데 실패하였습니다.</string>
    <string name="notSignUp_user">가입된 회원이 아닙니다.</string>
    <string name="not_valid_code">인증코드가 다릅니다.</string>
    <string name="do_not_signUp">이미 가입된 회원이거나 회원가입 양식에 알맞지 않습니다.</string>
    <string name="password_mismatch">비밀번호가 일치하지 않습니다</string>
    <string name="userName">사용자 이름</string>
    <string name="reservation_deleted">예약 삭제</string>
    <string name="failed">실패!!</string>
    <string name="failed_delete_reservation">예약 취소가 실패하였습니다.</string>
    <string name="failed_reservationList">예약목록을 불러오는데 실패하였습니다.</string>
    <string name="inputPhoneNumber">전화번호 입력</string>
    <string name="inputPassword">비밀번호 입력</string>
    <string name="reservation">예약</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="find_road">길찾기</string>
    <string name="name">이름</string>
    <string name="distance">거리</string>
    <string name="address">주소</string>
    <string name="name_is_not_valid">유효한 이름이 아닙니다.</string>
    <string name="password_is_not_valid">유효한 비밀번호가 아닙니다.</string>
    <string name="time">소요시간</string>
    <string name="setting">설정</string>
    <string name="user_name">사용자 이름</string>
    <string name="user_call">전화번호</string>
    <string name="user_password">비밀번호</string>
    <string name="password_condition">비밀번호는 최소 6자 이상,\n최소한 한개의 영문자와 숫자를 포함해야 합니다.</string>
    <string name="confirm_password">비밀번호 확인</string>
    <string name="reservation_information">예약정보</string>
    <string name="cancellation">예약취소</string>
    <string name="category_reservation">예약관리 > 실시간 예약 문의</string>
    <string name="check">조회</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>