<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="#E17373"
        tools:context=".view.signup.SignUpActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/signupAppBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/signup_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?android:attr/windowBackground"
                android:backgroundTint="#F67A8D"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <TextView
                    android:id="@+id/signup_toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/signUp"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
            android:id="@+id/signupInfoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:text="@string/signUpInfo"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.094"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="352dp"
            android:layout_height="109dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:background="#49000000"
            android:padding="1dp"
            android:stretchColumns="2"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupInfoTextView">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF">

            <TextView
                    android:id="@+id/termsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_span="3" />
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:background="#FFFFFF">

            <TextView
                    android:id="@+id/agreementTextView2"
                    android:layout_width="92dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:text="@string/agreeToTheTermsAndConditions"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

            <Button
                    android:id="@+id/termsButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:backgroundTint="#D3D3D3"
                    android:foregroundTint="#00000000"
                    android:text="@string/viewTerms"
                    android:textColor="@color/black" />

            <CheckBox
                    android:id="@+id/agreementCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="3dp"
                    android:buttonTint="#E17373" />
        </TableRow>

    </TableLayout>

    <TableLayout
            android:id="@+id/tableLayout2"
            android:layout_width="354dp"
            android:layout_height="250dp"
            android:layout_marginTop="32dp"
            android:background="#49000000"
            android:padding="1dp"
            android:stretchColumns="*"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF">

            <TextView
                    android:id="@+id/userNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/user_name"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            <EditText
                    android:id="@+id/userNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_span="3"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/user_name"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    android:textSize="18sp" />
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF">

            <TextView
                    android:id="@+id/userPasswordTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/user_password"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            <EditText
                    android:id="@+id/userPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_span="3"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/user_password"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    android:textSize="18sp" />

        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF">

            <TextView
                    android:id="@+id/userPasswordConfirmTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/confirm_password"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            <EditText
                    android:id="@+id/confirmPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_span="3"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    android:textSize="18sp" />

        </TableRow>

        <TableRow
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF">

            <TextView
                    android:id="@+id/userPhoneTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/user_call"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            <EditText
                    android:id="@+id/userPhoneEditText"
                    android:layout_width="121dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_span="3"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/user_call"
                    android:inputType="phone"
                    android:textAlignment="center"
                    android:textSize="18sp" />
        </TableRow>

        <TableRow
                android:layout_width="310dp"
                android:layout_height="35dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#FFFFFF">

            <TextView
                    android:id="@+id/verificationCodeTextView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/validCode"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            <Button
                    android:id="@+id/verificationCodeButton"
                    android:layout_width="56dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:backgroundTint="#F67A8D"
                    android:text="@string/request" />

            <EditText
                    android:id="@+id/verificationCodeEditText"
                    android:layout_width="95dp"
                    android:layout_height="41dp"
                    android:layout_margin="5dp"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/input_validCode"
                    android:inputType="number" />

            <TextView
                    android:id="@+id/timeTextView"
                    android:layout_width="26dp"
                    android:layout_height="39dp"
                    android:layout_margin="5dp"
                    android:text="@string/twoMinute"
                    android:textColor="#F44336" />

        </TableRow>

    </TableLayout>

    <Button
            android:id="@+id/signupButton"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#F2E041"
            android:text="@string/signUp"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />

    <Button
            android:id="@+id/logoutButton"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#F2E041"
            android:text="@string/logout"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupButton" />


</androidx.constraintlayout.widget.ConstraintLayout>